syntax = "proto3";

option csharp_namespace = "net.atos.daf.ct2.httpclientservice";

package httpclient;

service HttpClientService {  
 rpc GetVehiclesStatusOverview (VehiclesStatusOverviewRequest) returns (VehiclesStatusOverviewResponse);
 rpc GetVehicleUpdateDetails (VehicleUpdateDetailsRequest) returns (VehicleUpdateDetailsResponse);
 rpc GetSoftwareReleaseNote (CampiagnSoftwareReleaseNoteRequest) returns (CampiagnSoftwareReleaseNoteResponse);
 rpc GetScheduleSoftwareUpdate (ScheduleSoftwareUpdateRequest) returns (ScheduleSoftwareUpdateResponse);
}
enum ResponseCode{
  None = 0;
  Success = 200;
  Failed = 400;
  Conflict = 409;
  NotFound = 404;
  InternalServerError = 500;
}
message NoRequest{
int32 Id = 1;
}
message VehiclesStatusOverviewRequest {
repeated string Vins = 1;
string Language = 2;
string Retention =3;
}

message VehiclesStatusOverviewResults{
string Vin = 1;
string Status = 2;
string Description =3;
}

message VehiclesStatusOverview { 
repeated  VehiclesStatusOverviewResults VehiclesStatusOverviewResults=1;
}

message VehiclesStatusOverviewResponse{
int32 HttpStatusCode =1;
VehiclesStatusOverview VehiclesStatusOverview =2;
string Message = 3;
}

message VehicleUpdateDetailsRequest {
string Vin = 1;
string Retention =2;
}

message Campaign
    {
        string CampaignID =1;
        string BaselineAssignment =2;
        string CampaignSubject =3;
        repeated string Systems =4;
        string CampaignType =5;
        string CampaignCategory =6;
        string UpdateStatus =7;
        string EndDate = 8;
        int64 ScheduleDateTime = 9;
    }

message VehicleUpdateDetails
    {
        string Vin = 1;
        string VehicleSoftwareStatus = 2;
        repeated Campaign Campaigns = 3;
    }

    message VehicleUpdateDetailsResponse
    {
        int32 HttpStatusCode =1;
        VehicleUpdateDetails VehicleUpdateDetails = 2;
        string Message = 3;
    }

message CampiagnSoftwareReleaseNoteRequest {
        string CampaignId =1;
        repeated string Vins =2;
        string Language =3;
        string Retention =4;
}

    message CampiagnSoftwareReleaseNoteResponse
    {
        int32 HttpStatusCode =1;
        string ReleaseNote = 2;
        string Message = 3;
    }
message ScheduleSoftwareUpdateRequest{
        string CampaignId =1;        
        string BaseLineId =2;
        int64 ScheduleDateTime =3;
        string Vin =4;
        int64 CreatedAt = 5;
        int64 CreatedBy = 6;
        int64 TimeStampBoasch = 7;
        string Status = 8;
}
message ScheduleSoftwareUpdateResponse
    {
        ResponseCode HttpStatusCode =1;        
        string Message = 2;
        ScheduleSoftwareUpdateRequest ScheduleSoftwareUpdateRequest=3;
    }