syntax = "proto3";

import "google/protobuf/timestamp.proto";

option csharp_namespace = "net.atos.daf.ct2.vehicleservice";

package vehicle;

// The greeting service definition.
service VehicleService {
  // Sends a greeting
  rpc CreateVehicle (VehicleRequest) returns (VehicleResponce);
  //rpc Get (VehicleRequest) returns (VehicleResponce);
}

// The request message containing the user's name.
message VehicleRequest {
  int32 Id=1;
  int32 Organizationid=2;
  string Name = 3;
  string Vin=4;
  string Registrationno=5;
  enum VehicleStatusType
  {
    OptIn = 0;
    OptOut = 1;
    Terminate = 2;
    OTA = 3;
  }
VehicleStatusType Status=6;
google.protobuf.Timestamp StatusDate=7;
google.protobuf.Timestamp TerminationDate=8;

}

// The response message containing the greetings.
message VehicleResponce {
  int32 Id=1;
  int32 Organizationid=2;
  string Name = 3;
  string VIN=4;
//   string RegistrationNo=5;
//   enum VehicleStatusType
//   {
//       OptIn = 0;
//       OptOut = 1;
//       Terminate = 2;
//       OTA = 3;
//   }
//  VehicleStatusType Status=6;
//  google.protobuf.Timestamp StatusDate=7;
//  google.protobuf.Timestamp TerminationDate=8;

}
